@@ -31,11 +31,20 @@ module hppCorbaServer {
 
     /** \brief Set roadmap builder of specified robot in ChppPlanner::robotVector.
 	\param inProblemId rank of problem in vector of hppProblems.
-	\param inRoadmapBuilderName name of the roadmap builder in {"basic", "diffusing", "bi-diffusing", "IPP", "visibility", "PCA<diffusing>"}.
+	\param inRoadmapBuilderName name of the roadmap builder in {"basic", "diffusing", "IPP", "visibility", "PCA<diffusing>"}.
 	\param inDisplay whether the roadmap should be displayed in the interface.
 	\return 0 if success, -1 if failure.
     */
     short setRoadmapbuilder(in short inProblemId, in string inRoadmapBuilderName, in boolean inDisplay);
+
+    /**
+       \brief Define which nodes are expanded by roadmap builder
+
+       \param inProblemId rank of problem in vector of hppProblems.
+       \param inDiffusingNode "start", "goal" or "start and goal"
+       \return 0 if success, -1 if failure. Roadmap builder should be of type diffusing.
+    */
+    short setDiffusingNode(in short inProblemId, in string inDiffusingNode);
 
     /** \brief Set path optimizer of specified robot in ChppPlanner::robotVector.
 	\param inProblemId rank of problem in vector of hppProblems.
