@@ -47,7 +47,7 @@ CORBA::Short ChppciProblem_impl::setSteeringMethod(CORBA::Short inProblemId,
 
     /* Check that name correspond to a steering method factory */
     if (!attHppciServer->steeringMethodFactoryAlreadySet(steeringMethodName)) {
-      ODEBUG1("unknown steering method.");
+      ODEBUG1(":setSteeringMethod: unknown steering method.");
       return -1;
     }
 
@@ -58,7 +58,7 @@ CORBA::Short ChppciProblem_impl::setSteeringMethod(CORBA::Short inProblemId,
     hppRobot->steeringMethod(steeringMethod);
   }
   else {
-    ODEBUG1("setSteeringMethod: wrong robot Id");
+    ODEBUG1(":setSteeringMethod: wrong robot Id");
     return -1;
   }
 
@@ -93,11 +93,6 @@ CORBA::Short ChppciProblem_impl::setRoadmapbuilder(CORBA::Short inProblemId, con
       CkwsDiffusingRdmBuilderShPtr roadmapBuilder = CkwsDiffusingRdmBuilder::create(roadmap, penetration);
       status = attHppPlanner->roadmapBuilderIthProblem(hppProblemId, roadmapBuilder, inDisplay);
       return status;      
-    } else if (roadmapBuilderName == "bi-diffusing") {
-      CkwsDiffusingRdmBuilderShPtr roadmapBuilder = CkwsDiffusingRdmBuilder::create(roadmap, penetration);
-      roadmapBuilder->diffuseFromProblemGoal(true);
-      status = attHppPlanner->roadmapBuilderIthProblem(hppProblemId, roadmapBuilder, inDisplay);
-      return status;      
     } else if (roadmapBuilderName == "IPP") {
       CkwsIPPRdmBuilderShPtr roadmapBuilder = CkwsIPPRdmBuilder::create(roadmap, penetration);
       status = attHppPlanner->roadmapBuilderIthProblem(hppProblemId, roadmapBuilder, inDisplay);
@@ -109,12 +104,58 @@ CORBA::Short ChppciProblem_impl::setRoadmapbuilder(CORBA::Short inProblemId, con
 	CkwsPlusPCARdmBuilder<CkwsDiffusingRdmBuilder>::create(roadmap, penetration);
       status = attHppPlanner->roadmapBuilderIthProblem(hppProblemId, roadmapBuilder, inDisplay);
     } else {
-      ODEBUG1("unknown roadmap builder");
+      ODEBUG1(":setRoadmapbuilder: unknown roadmap builder");
       return -1;
     }
   }
   else {
-    ODEBUG1("setRoadmapbuilder: wrong robot Id");
+    ODEBUG1(":setRoadmapbuilder: wrong robot Id");
+    return -1;
+  }
+
+  return 0;
+}
+
+CORBA::Short ChppciProblem_impl::setDiffusingNode(CORBA::Short inProblemId, 
+						  const char* inDiffusingNode)
+{
+  std::string diffusingNode(inDiffusingNode);
+  unsigned int hppProblemId = (unsigned int)inProblemId;
+
+  unsigned int nbProblems = attHppPlanner->getNbHppProblems();
+
+  // Test that rank is less than number of robots in vector.
+  if (hppProblemId < nbProblems) {
+    // Get roadmap builder in hppPlanner object.
+    CkwsDiffusingRdmBuilderShPtr roadmapBuilder = 
+      KIT_DYNAMIC_PTR_CAST(CkwsDiffusingRdmBuilder, 
+			   attHppPlanner->roadmapBuilderIthProblem(hppProblemId));
+    // Check that diffusion roadmap builder is set
+    if (!roadmapBuilder) {
+      ODEBUG1(":setDiffusingNode: roadmap builder is not set or not of type diffusion");
+      return -1;
+    }
+    if (diffusingNode == "start") {
+      roadmapBuilder->diffuseFromProblemStart(true);
+      roadmapBuilder->diffuseFromProblemGoal(false);
+      ODEBUG2(":setDiffusingNode: diffusing from start");
+    }
+    else if (diffusingNode == "goal") {
+      roadmapBuilder->diffuseFromProblemStart(false);
+      roadmapBuilder->diffuseFromProblemGoal(true);
+      ODEBUG2(":setDiffusingNode: diffusing from goal");
+    } 
+    else if (diffusingNode == "start and goal") {
+      roadmapBuilder->diffuseFromProblemStart(true);
+      roadmapBuilder->diffuseFromProblemGoal(true);
+      ODEBUG2(":setDiffusingNode: diffusing from start and goal");
+    }
+    else  {
+      ODEBUG2(":setDiffusingNode: unknown command " << diffusingNode);
+    }
+  }
+  else {
+    ODEBUG1(":setDiffusingNode: wrong robot Id");
     return -1;
   }
 
@@ -130,7 +171,7 @@ CORBA::Short ChppciProblem_impl::setPathOptimizer(CORBA::Short inProblemId, cons
 
   unsigned int nbProblems = attHppPlanner->getNbHppProblems();
 
-  ODEBUG2("hppciProblem.cpp: setPathOptimizer: nbProblems " << nbProblems << "problem id " 
+  ODEBUG2(":setPathOptimizer: nbProblems " << nbProblems << "problem id " 
 	  << inProblemId << ", pathOptimizerName " <<pathOptimizerName);
   // Test that rank is less than number of robots in vector.
   if (hppProblemId < nbProblems) {
@@ -139,30 +180,30 @@ CORBA::Short ChppciProblem_impl::setPathOptimizer(CORBA::Short inProblemId, cons
     if (pathOptimizerName == "clear") {
       CkwsClearOptimizerShPtr pathOptimizer = CkwsClearOptimizer::create();
       status = attHppPlanner->pathOptimizerIthProblem(hppProblemId, pathOptimizer);
-      ODEBUG2("ChppciProblem_impl::setPathOptimizer: clear path optimizer set.");
+      ODEBUG2(":setPathOptimizer: clear path optimizer set.");
       return (CORBA::Short)status;
     } else if (pathOptimizerName == "adaptiveShortcut") {
       CkwsAdaptiveShortcutOptimizerShPtr pathOptimizer = CkwsAdaptiveShortcutOptimizer::create();
       status = attHppPlanner->pathOptimizerIthProblem(hppProblemId, pathOptimizer);
-      ODEBUG2("ChppciProblem_impl::setPathOptimizer: adaptive shortcut path optimizer set");
+      ODEBUG2(":setPathOptimizer: adaptive shortcut path optimizer set");
       return (CORBA::Short)status;
     } else if (pathOptimizerName == "random") {
       CkwsRandomOptimizerShPtr pathOptimizer = CkwsRandomOptimizer::create();
       status = attHppPlanner->pathOptimizerIthProblem(hppProblemId, pathOptimizer);
-      ODEBUG2("ChppciProblem_impl::setPathOptimizer: random path optimizer set");
+      ODEBUG2(":setPathOptimizer: random path optimizer set");
       return (CORBA::Short)status;
     } else if (pathOptimizerName == "none") {
       CkwsPathOptimizerShPtr pathOptimizer;
       status = attHppPlanner->pathOptimizerIthProblem(hppProblemId, pathOptimizer);
-      ODEBUG2("ChppciProblem_impl::setPathOptimizer: no path optimizer set");
+      ODEBUG2(":setPathOptimizer: no path optimizer set");
       return (CORBA::Short)status;
     } else {
-      ODEBUG2("ChppciProblem_impl::setPathOptimizer: unknown path optimizer");
+      ODEBUG2(":setPathOptimizer: unknown path optimizer");
       return -1;
     }
   }
   else {
-    ODEBUG1("setPathOptimizer: wrong robot Id");
+    ODEBUG1(":setPathOptimizer: wrong robot Id");
     return -1;
   }
 
@@ -182,7 +223,7 @@ CORBA::Short ChppciProblem_impl::setDistanceFunction(CORBA::Short inProblemId, c
     CkwsRoadmapBuilderShPtr roadmapBuilder = attHppPlanner->roadmapBuilderIthProblem(hppProblemId);
     // Check that roadmap builder is set
     if (!roadmapBuilder) {
-      ODEBUG1(" setDistanceFunction: roadmap builder is not set");
+      ODEBUG1(":setDistanceFunction: roadmap builder is not set");
       return -1;
     }
     /* Check that name corresponds to a distance function factory */
@@ -195,11 +236,11 @@ CORBA::Short ChppciProblem_impl::setDistanceFunction(CORBA::Short inProblemId, c
     CkwsDistanceShPtr distance = 
       attHppciServer->createDistanceFunction(distanceName, inOriented);
 
-    ODEBUG2(" set roadmap builder distance function to " << distanceName);
+    ODEBUG2(":setDistanceFunction: set roadmap builder distance function to " << distanceName);
     roadmapBuilder->distance(distance);
   }
   else {
-    ODEBUG1(" setDistanceFunction: wrong robot Id");
+    ODEBUG1(":setDistanceFunction: wrong robot Id");
     return -1;
   }
 
@@ -222,12 +263,12 @@ CORBA::Short ChppciProblem_impl::setDiffusionNodePicker(CORBA::Short inProblemId
 			   attHppPlanner->roadmapBuilderIthProblem(hppProblemId));
     // Check that diffusion roadmap builder is set
     if (!roadmapBuilder) {
-      ODEBUG1(" setDiffusionNodePicker: roadmap builder is not set or not of type diffusion");
+      ODEBUG1(":setDiffusionNodePicker: roadmap builder is not set or not of type diffusion");
       return -1;
     }
     /* Check that name corresponds to a diffusion node picker factory */
     if (!attHppciServer->diffusionNodePickerFactoryAlreadySet(diffusionNodePickerName)) {
-      ODEBUG1(" unknown diffusion node picker.");
+      ODEBUG1(":setDiffusionNodePicker: unknown diffusion node picker.");
       return -1;
     }
 
@@ -235,11 +276,11 @@ CORBA::Short ChppciProblem_impl::setDiffusionNodePicker(CORBA::Short inProblemId
     CkwsDiffusionNodePickerShPtr diffusionNodePicker = 
       attHppciServer->createDiffusionNodePicker(diffusionNodePickerName);
 
-    ODEBUG2(" set roadmap builder diffusion node picker to " << diffusionNodePickerName);
+    ODEBUG2(":setDiffusionNodePicker: set roadmap builder diffusion node picker to " << diffusionNodePickerName);
     roadmapBuilder->diffusionNodePicker(diffusionNodePicker);
   }
   else {
-    ODEBUG1(" setDiffusionNodePicker: wrong robot Id");
+    ODEBUG1(":setDiffusionNodePicker: wrong robot Id");
     return -1;
   }
 
@@ -263,12 +304,12 @@ CORBA::Short ChppciProblem_impl::setDiffusionShooter(CORBA::Short inProblemId,
 			   attHppPlanner->roadmapBuilderIthProblem(hppProblemId));
     // Check that diffusion roadmap builder is set
     if (!roadmapBuilder) {
-      ODEBUG1(" setDiffusionShooter: roadmap builder is not set or not of type diffusion");
+      ODEBUG1(":setDiffusionShooter: roadmap builder is not set or not of type diffusion");
       return -1;
     }
     /* Check that name corresponds to a diffusion shooter factory */
     if (!attHppciServer->diffusionShooterFactoryAlreadySet(diffusionShooterName)) {
-      ODEBUG1(" unknown diffusion shooter.");
+      ODEBUG1(":setDiffusionShooter: unknown diffusion shooter: " << diffusionShooterName);
       return -1;
     }
 
@@ -277,11 +318,11 @@ CORBA::Short ChppciProblem_impl::setDiffusionShooter(CORBA::Short inProblemId,
       attHppciServer->createDiffusionShooter(diffusionShooterName,
 					     inStandardDeviation);
 
-    ODEBUG2(" set roadmap builder diffusion shooter to " << diffusionShooterName);
+    ODEBUG2(":setDiffusionShooter: set roadmap builder diffusion shooter to " << diffusionShooterName);
     roadmapBuilder->diffusionShooter(diffusionShooter);
   }
   else {
-    ODEBUG1(" setDiffusionShooter: wrong robot Id");
+    ODEBUG1(":setDiffusionShooter: wrong robot Id");
     return -1;
   }
 
@@ -307,14 +348,14 @@ CORBA::Short ChppciProblem_impl::setInitialConfig(CORBA::Short inProblemId, cons
     // Create a config for robot initialized with dof vector.
     CkwsConfigShPtr config = CkwsConfig::create(hppRobot, dofVector);
     if (!config) {
-      ODEBUG1("setInitialConfig: cannot create config. Check that robot nb dof is equal to config size");
+      ODEBUG1(":setInitialConfig: cannot create config. Check that robot nb dof is equal to config size");
       return -1;
     }
     
     return (short)attHppPlanner->initConfIthProblem(hppProblemId, config);
   }
   else {
-    ODEBUG1("setInitialConfig: wrong robot Id");
+    ODEBUG1(":setInitialConfig: wrong robot Id");
     return -1;
   }
   return 0;
@@ -339,14 +380,14 @@ CORBA::Short ChppciProblem_impl::setGoalConfig(CORBA::Short inProblemId, const h
     // Create a config for robot initialized with dof vector.
     CkwsConfigShPtr config = CkwsConfig::create(hppRobot, dofVector);
     if (!config) {
-      ODEBUG1("setGoalConfig: cannot create config. Check that robot nb dof is equal to config size");
+      ODEBUG1(":setGoalConfig: cannot create config. Check that robot nb dof is equal to config size");
       return -1;
     }
     
     return (short)attHppPlanner->goalConfIthProblem(hppProblemId, config);
   }
   else {
-    ODEBUG1("setGoalConfig: wrong robot Id");
+    ODEBUG1(":setGoalConfig: wrong robot Id");
     return -1;
   }
   return 0;
@@ -380,7 +421,7 @@ CORBA::Short ChppciProblem_impl::solveOneProblem(CORBA::Short inProblemId, CORBA
     pathLength = attHppPlanner->getPath(hppProblemId, inLastPathId)->length();
   }
   else {
-    ODEBUG1("solveOneProblem: no path in hppProblem " << hppProblemId);
+    ODEBUG1(":solveOneProblem: no path in hppProblem " << hppProblemId);
   }
 
   return (CORBA::Short)status;
@@ -417,7 +458,7 @@ hppCorbaServer::dofSeq* ChppciProblem_impl::configAtDistance(CORBA::Short inProb
   
   //get the config of the robot on the path
   if (atDistance > pathLength) {
-    ODEBUG1("configAtParam: param out of range (longer than path Length) " << "Param : "<< atDistance << " length : " << pathLength);
+    ODEBUG1(":configAtParam: param out of range (longer than path Length) " << "Param : "<< atDistance << " length : " << pathLength);
    
   }
   else {
@@ -443,7 +484,7 @@ CORBA::Short ChppciProblem_impl::setObstacleTolerance(CORBA::Short inProblemId, 
   // get object hppPlanner of Corba server.
 
   if(!attHppPlanner){
-    ODEBUG1("problem " << hppProblemId << " not found");
+    ODEBUG1(":setObstacleTolerance: problem " << hppProblemId << " not found");
     return -1;
   }
 
@@ -454,7 +495,7 @@ CORBA::Short ChppciProblem_impl::setObstacleTolerance(CORBA::Short inProblemId, 
 
   for(unsigned int i =0; i<oList.size(); i++){
     oList[i]->tolerance(tolerance);
-    ODEBUG1("tolerance " << tolerance << " set to obstacle " << i);
+    ODEBUG1(":setObstacleTolerance: tolerance " << tolerance << " set to obstacle " << i);
   }
   return 0;
 }
